--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "@types/amqplib": "^0.5.17",
     "amqp-connection-manager": "^3.2.1",
     "amqplib": "^0.6.0",
+    "jwt-decode": "^3.1.2",
+    "keycloak-connect": "^12.0.3",
+    "meilisearch": "^0.18.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3"
