--- a/package.json
+++ b/package.json
@@ -22,12 +22,20 @@
   },
   "dependencies": {
     "@nestjs/common": "^7.5.1",
+    "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.5.1",
+    "@nestjs/graphql": "^7.9.9",
     "@nestjs/microservices": "^7.6.5",
     "@nestjs/platform-express": "^7.5.1",
     "@types/amqplib": "^0.5.17",
     "amqp-connection-manager": "^3.2.1",
     "amqplib": "^0.6.0",
+    "apollo-server-express": "^2.21.0",
+    "axios": "^0.21.1",
+    "cache-manager": "^3.4.0",
+    "graphql": "^15.5.0",
+    "graphql-tools": "^7.0.4",
+    "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "keycloak-connect": "^12.0.3",
     "meilisearch": "^0.18.1",
@@ -39,6 +47,7 @@
     "@nestjs/cli": "^7.5.1",
     "@nestjs/schematics": "^7.1.3",
     "@nestjs/testing": "^7.5.1",
+    "@types/cache-manager": "^3.4.0",
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.6",
