add apollo client to nest

--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "@types/amqplib": "^0.5.17",
     "amqp-connection-manager": "^3.2.1",
     "amqplib": "^0.6.0",
+    "apollo-boost": "^0.4.9",
     "apollo-server-express": "^2.21.0",
     "axios": "^0.21.1",
     "cache-manager": "^3.4.0",
+    "cross-fetch": "^3.0.6",
     "graphql": "^15.5.0",
     "graphql-tools": "^7.0.4",
     "jsonwebtoken": "^8.5.1",
