--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.11",
     "@nestjs/common": "^7.5.1",
     "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.5.1",
@@ -30,10 +31,7 @@
     "@types/amqplib": "^0.5.17",
     "amqp-connection-manager": "^3.2.1",
     "amqplib": "^0.6.0",
-    "apollo-boost": "^0.4.9",
     "apollo-link": "^1.2.14",
-    "apollo-link-context": "^1.0.20",
-    "apollo-link-ws": "^1.0.20",
     "apollo-server-express": "^2.21.0",
     "axios": "^0.21.1",
     "cache-manager": "^3.4.0",
