--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "eslint": "^7.12.1",
     "eslint-config-prettier": "7.1.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-unicorn": "^32.0.1",
     "jest": "^26.6.3",
     "prettier": "^2.1.2",
     "supertest": "^6.0.0",
