--- a/sample.env
+++ b/sample.env
@@ -1,2 +1,2 @@
-PUBLIC_KEY_URLS=http://localhost:9001/auth/realms/IRP
+PUBLIC_KEY_URLS=http://localhost:9001/auth/realms/Chewy
 HASURA_ADMIN_SECRET=password
