--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "server",
+  "name": "chewy-server",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -9,7 +9,6 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "gql-generate": "graphql-codegen --config codegen.js --watch",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
@@ -22,63 +21,35 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@graphql-codegen/cli": "^1.20.1",
-    "@graphql-codegen/introspection": "^1.18.1",
-    "@graphql-codegen/typescript": "^1.21.0",
-    "@graphql-codegen/typescript-operations": "^1.17.14",
-    "@graphql-codegen/typescript-react-apollo": "^2.2.1",
-    "@nestjs/common": "^7.5.1",
-    "@nestjs/config": "^0.6.3",
-    "@nestjs/core": "^7.5.1",
-    "@nestjs/graphql": "^7.9.9",
-    "@nestjs/microservices": "^7.6.5",
-    "@nestjs/platform-express": "^7.5.1",
-    "@types/amqplib": "^0.5.17",
-    "amqp-connection-manager": "^3.2.1",
-    "amqplib": "^0.6.0",
-    "apollo-link": "^1.2.14",
-    "apollo-server-express": "^2.21.0",
-    "axios": "^0.21.1",
-    "cache-manager": "^3.4.0",
-    "cross-fetch": "^3.0.6",
-    "graphql": "^15.5.0",
-    "graphql-request": "^3.4.0",
-    "graphql-tag": "^2.11.0",
-    "graphql-tools": "^7.0.4",
-    "jsonwebtoken": "^8.5.1",
-    "jwt-decode": "^3.1.2",
-    "keycloak-connect": "^12.0.3",
-    "meilisearch": "^0.18.1",
+    "@nestjs/common": "^9.0.0",
+    "@nestjs/core": "^9.0.0",
+    "@nestjs/platform-express": "^9.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.3",
-    "subscriptions-transport-ws": "^0.9.18",
-    "type-graphql": "^1.1.1"
+    "rxjs": "^7.2.0"
   },
   "devDependencies": {
-    "@graphql-codegen/typescript-graphql-request": "^3.0.2",
-    "@nestjs/cli": "^7.5.1",
-    "@nestjs/schematics": "^7.1.3",
-    "@nestjs/testing": "^7.5.1",
-    "@types/cache-manager": "^3.4.0",
-    "@types/express": "^4.17.8",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^14.14.6",
-    "@types/supertest": "^2.0.10",
-    "@typescript-eslint/eslint-plugin": "^4.6.1",
-    "@typescript-eslint/parser": "^4.6.1",
-    "eslint": "^7.12.1",
-    "eslint-config-prettier": "7.1.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-unicorn": "^32.0.1",
-    "jest": "^26.6.3",
-    "prettier": "^2.1.2",
-    "supertest": "^6.0.0",
-    "ts-jest": "^26.4.3",
-    "ts-loader": "^8.0.8",
-    "ts-node": "^9.0.0",
-    "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.0.5"
+    "@nestjs/cli": "^9.0.0",
+    "@nestjs/schematics": "^9.0.0",
+    "@nestjs/testing": "^9.0.0",
+    "@types/express": "^4.17.13",
+    "@types/jest": "28.1.8",
+    "@types/node": "^16.0.0",
+    "@types/supertest": "^2.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "eslint": "^8.0.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "jest": "28.1.3",
+    "prettier": "^2.3.2",
+    "source-map-support": "^0.5.20",
+    "supertest": "^6.1.3",
+    "ts-jest": "28.0.8",
+    "ts-loader": "^9.2.3",
+    "ts-node": "^10.0.0",
+    "tsconfig-paths": "4.1.0",
+    "typescript": "^4.7.4"
   },
   "jest": {
     "moduleFileExtensions": [
