--- a/.chewy/chewy-component.yml
+++ b/.chewy/chewy-component.yml
@@ -1,5 +1,5 @@
 repository: https://github.com/gochewy/nestjs.git
 name: nestjs
 type: source
-version: 0.1.1-branch
+version: main
 dependencies: []
